Implement OffscreenCanvas.WebGL2Context TransferToImageBitmap

BUG=696223
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2816033004
Cr-Commit-Position: refs/heads/master@{#467007}

Former-commit-id: 05b481280cf7cedb90c986f4b46aaaf87e781eca